--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,9 +3,29 @@
   }
   
   body {
-    font: 16px Arial;  
+  text-align: center;
+  background-color: #87CEFA;
   }
   
+  .pageheading {
+    color:	#00FFFF;
+  }
+
+  .flex-container {
+    font-family: sans-serif;
+    text-align : center;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+  }
+  
+
+  .flex-container > div {
+    margin: 10px;
+    padding: 20px;
+    width: 30%;
+  }
+
   /*the container must be positioned relative:*/
   .autocomplete {
     position: relative;
@@ -14,13 +34,11 @@
   
   input {
     border: 1px solid transparent;
-    background-color: #f1f1f1;
     padding: 10px;
     font-size: 16px;
   }
   
   input[type=text] {
-    background-color: #f1f1f1;
     width: 100%;
   }
   
@@ -67,19 +85,4 @@
     margin: 10px;
   }
   
-  .flex-container {
-    font-family: sans-serif;
-    text-align : center;
-    margin: 0 auto;
-    background-color: "#87CEFA";
-    display: flex;
-    flex-direction: row;
-  }
-  
-
-  .flex-container > div {
-    margin: 10px;
-    padding: 20px;
-    border: 1px solid red;
-    width: 30%;
-  }
+ 
