--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -26,6 +26,14 @@
     width: 30%;
   }
 
+  .text-1 {
+    font-size: 25px;
+    margin:  20px 0;
+  }
+
+  .text-2 {
+    margin:  20px 0;
+  }
   /*the container must be positioned relative:*/
   .autocomplete {
     position: relative;
