--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -50,7 +50,7 @@
     width: 100%;
   }
   
-  input[type=submit] {
+  input[type=button] {
     background-color: DodgerBlue;
     color: #fff;
     cursor: pointer;
